# CH3

./: main.py  pyproject.toml
cogs/: music.py
src/: interfaces.py  main.py
src/players/: ytdlp.py
